Fixed a problem: text not showing in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,10 @@
 
 #experience,
 #education {
+  button {
+    color: black;
+  }
+
   .panel {
     font-family: "Red Hat Text";
     display: flex;
@@ -175,6 +179,7 @@
     align-items: center;
     border: 2px solid grey;
     border-radius: 10px;
+    color: black;
 
     div {
       flex: 1 1 0;
